[acnh] Attempt to fix viewport issue on mobile
The viewport sizing includes the browser controls, so part of the page
gets cut off. This attempts to make the page fit in the inner window.

--- a/animal_crossing/style.css
+++ b/animal_crossing/style.css
@@ -1,12 +1,17 @@
+:root {
+  --vh: 1vh;
+  --vw: 1vw;
+}
+
 body {
   /* background-color: #4e99ea; */
   background-color: #57d5b1;
   font-family: "Open Sans";
-  font-size: max(2vh, 20px);
+  font-size: max(calc(2 * var(--vh)), 20px);
   margin: 0px;
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: calc(100 * var(--vh));
   overflow: auto;
   justify-content: center;
 }
@@ -21,18 +26,18 @@ body {
 #login-form {
   display: flex;
   flex-direction: column;
-  max-width: min(75vw, 50vh);
+  max-width: min(calc(75 * var(--vw)), calc(50 * var(--vh)));
   padding-bottom: 100px;
   flex-grow: 1;
 }
 
 #login-form > input,
 #login-form > button {
-  margin: 0.5vh;
+  margin: calc(0.5 * var(--vh));
   padding: 7px 15px;
   min-height: 50px;
   min-width: 250px;
-  height: 5vh;
+  height: calc(5 * var(--vh));
   border-radius: 10px;
   border: solid 1px gray;
   box-sizing: border-box;
@@ -66,14 +71,14 @@ body {
   z-index: 1;
   color: white;
   text-align: center;
-  font-size: max(14px, 1.5vh);
+  font-size: max(14px, calc(1.5 * var(--vh)));
   order: 1;
   flex-direction: row;
 }
 
 .menu img {
-  width: max(30px, 4vh);
-  height: max(30px, 4vh);
+  width: max(30px, calc(4 * var(--vh)));
+  height: max(30px, calc(4 * var(--vh)));
 }
 
 .menu > div {
@@ -90,7 +95,7 @@ body {
 }
 
 #context-menu-icon {
-  padding: 5px max(5px, 2vw);
+  padding: 5px max(5px, calc(2 * var(--vw)));
   flex-grow: 0;
   order: 1;
 }
@@ -167,7 +172,7 @@ body {
   text-align: center;
   background-color: #3598bf;
   color: #addeea;
-  padding: max(1.75vh, 10px);
+  padding: max(calc(1.75 * var(--vh)), 10px);
 }
 
 .tab:not(.active-tab):hover {
@@ -256,7 +261,7 @@ body {
 .item-name {
   flex-grow: 1;
   margin: 10px;
-  font-size: max(2vh, 20px);
+  font-size: max(calc(2 * var(--vh)), 20px);
 }
 
 .display-hidden {
@@ -267,10 +272,10 @@ body {
   background-repeat: no-repeat;
   background-size: contain;
   background-color: #f2935d;
-  width: max(5vh, 44px);
-  height: max(5vh, 44px);
+  width: max(calc(5 * var(--vh)), 44px);
+  height: max(calc(5 * var(--vh)), 44px);
   display: inline-block;
-  border-radius: max(2.5vh, 22px);
+  border-radius: max(calc(2.5 * var(--vh)), 22px);
   box-shadow: 1px 2px 1px #864018;
   margin: 5px;
   -webkit-touch-callout: none;
@@ -288,7 +293,7 @@ body {
 }
 
 .item-icon {
-  height: max(7vh, 55px);
+  height: max(calc(7 * var(--vh)), 55px);
   margin: 5px;
 }
 
